Language: Internal: transform translation variables to gettext for templates - refs BT#21777

--- a/public/main/template/default/admin/career_dashboard.html.twig
+++ b/public/main/template/default/admin/career_dashboard.html.twig
@@ -22,7 +22,7 @@
                     <table class="table promotions">
                         <thead class="title">
                         <th>{{ 'Promotions' | get_lang }}</th>
-                        <th>{{ 'StudyCycle' | get_lang }} </th>
+                        <th>{{ 'Semester' | get_lang }} </th>
                         <th>{{ 'Courses' | get_lang }} </th>
                         </thead>
                         {% for promotions in item.career %}
