--- a/public/main/template/default/admin/gradebook_dependency.html.twig
+++ b/public/main/template/default/admin/gradebook_dependency.html.twig
@@ -8,7 +8,7 @@
                 ({{ gradebook_category.courseCode }})
             {% endif %}
         </h3>
-        {{ 'MinimumGradebookToValidate' | get_lang }} :  {{ min_to_validate }}
+        {{ 'Minimum to validate' | get_lang }} :  {{ min_to_validate }}
         <br/>
         {{ 'MandatoryCourses' | get_lang }}
         {% for course in mandatory_courses %}
