--- a/public/main/template/default/admin/gradebook_list.html.twig
+++ b/public/main/template/default/admin/gradebook_list.html.twig
@@ -10,7 +10,7 @@
                 <tr>
                     <th>{{ 'Name' | get_lang }}</th>
                     <th>{{ 'Course' | get_lang }}</th>
-                    <th>{{ 'Actions' | get_lang }} </th>
+                    <th>{{ 'Detail' | get_lang }} </th>
                 </tr>
                 </thead>
                 {% for item in gradebook_list %}
