--- a/public/main/template/default/admin/teacher_time_report.html.twig
+++ b/public/main/template/default/admin/teacher_time_report.html.twig
@@ -37,7 +37,7 @@
             <th>{{ 'Course' | get_lang }}</th>
         {% endif %}
         <th>{{ 'Coach' | get_lang }}</th>
-        <th class="text-center">{{ 'TotalTime' | get_lang }}</th>
+        <th class="text-center">{{ 'Total time' | get_lang }}</th>
     </tr>
     </thead>
     <tbody>
