--- a/public/main/template/default/agenda/planification.html.twig
+++ b/public/main/template/default/agenda/planification.html.twig
@@ -30,7 +30,7 @@
                 <tr>
                     <th class="col-session">{{ 'Session'|get_lang }}</th>
                     {% for i in 1..52 %}
-                        <th class="col-week text-center" title="{{ 'WeekX'|get_lang|format(i) }}"><span>{{ i }}</span></th>
+                        <th class="col-week text-center" title="{{ 'Week %s'|get_lang|format(i) }}"><span>{{ i }}</span></th>
                     {% endfor %}
                 </tr>
                 </thead>
@@ -65,7 +65,7 @@
         </div>
     {% else %}
         <div class="alert alert-warning">
-            {{ 'ThereIsNotStillASession'|get_lang }}
+            {{ 'There are no sessions available'|get_lang }}
         </div>
     {% endif %}
     {% endautoescape %}
