--- a/public/main/template/default/blog/blog.html.twig
+++ b/public/main/template/default/blog/blog.html.twig
@@ -39,7 +39,7 @@
                                         <p>
                                             {{ item.extract }}
                                             <button type="button" class="btn btn-link btn-read-more" data-id="{{ item.id_post }}">
-                                                {{ 'ReadMore'|get_lang }}
+                                                {{ 'Read more...'|get_lang }}
                                             </button>
                                         </p>
                                     </div>
@@ -88,7 +88,7 @@
             </div>
             <div id="task-blog" class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ 'MyTasks'|get_lang }}</h5>
+                    <h5 class="card-title">{{ 'My tasks'|get_lang }}</h5>
                     {{ task }}
                 </div>
             </div>
