--- a/public/main/template/default/coursecopy/import_moodle.html.twig
+++ b/public/main/template/default/coursecopy/import_moodle.html.twig
@@ -10,7 +10,7 @@
 <script>
 $(function() {
     $(".btn--primary").click(function() {
-        $("#loader").html('<div class="wobblebar-loader"></div><p> {{ 'ProcessingImportPleaseDontCloseThisWindowThisActionMayTakeLongTimePlaseWait' | get_lang }} </p>');
+        $("#loader").html('<div class="wobblebar-loader"></div><p> {{ 'Processing the import... Please don't close this window. This process may take a considerable amount of time. Please be patient.' | get_lang }} </p>');
     });
 });
 </script>
