--- a/public/main/template/default/dashboard/index.html.twig
+++ b/public/main/template/default/dashboard/index.html.twig
@@ -12,7 +12,7 @@
             {% endfor %}
         {% else %}
          <div class="alert alert-info" role="alert">
-             {{ 'YouHaveNotEnabledBlocks'| get_lang }}
+             {{ 'You haven't enabled any block'| get_lang }}
          </div>
         {% endif %}
     </div>
