--- a/public/main/template/default/exercise/reading_comprehension.html.twig
+++ b/public/main/template/default/exercise/reading_comprehension.html.twig
@@ -2,7 +2,7 @@
     <div class="question-reading-comprehension-overlay"></div>
     {% if exercise_type == 1 %} {# all in one page #}
         <button type="button" class="btn btn--plain btn-lg" id="question-{{ id }}-start">
-            {{ 'StartTimeWindow'|get_lang }}
+            {{ 'Start'|get_lang }}
             <span class="fa fa-play" aria-hidden="true"></span>
         </button>
     {% endif %}
