--- a/public/main/template/default/gamification/my_progress.html.twig
+++ b/public/main/template/default/gamification/my_progress.html.twig
@@ -6,7 +6,7 @@
                     {{ user_avatar }}
                     <div class="username">{{ user|user_complete_name }}</div>
                     <div class="star-progress">
-                        <span class="float-right">{{ 'XPoints'|get_lang|format(gamification_points) }}</span>
+                        <span class="float-right">{{ '%s points'|get_lang|format(gamification_points) }}</span>
 
                         {% if gamification_stars > 0 %}
                             {% for i in 1..gamification_stars %}
@@ -26,13 +26,13 @@
                             <span class="sr-only">{{ gamification_progress }} Complete (success)</span>
                         </div>
                     </div>
-                    <div class="progress-percentage text-right">{{ 'XPercent'|get_lang|format(gamification_progress) }}</div>
+                    <div class="progress-percentage text-right">{{ '%s %%'|get_lang|format(gamification_progress) }}</div>
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
-                {{ 'ShowProgress'|get_lang }}
+                {{ 'Show progress'|get_lang }}
             </div>
             <div class="panel-body">
                 <ul class="list-course">
