--- a/public/main/template/default/gradebook/my_certificates.html.twig
+++ b/public/main/template/default/gradebook/my_certificates.html.twig
@@ -1,12 +1,12 @@
 {% if course_list is not empty %}
-    <h2 class="page-header">{{ "Courses"|get_lang }}</h2>
+    <h2 class="page-header">{{ 'Courses'|get_lang }}</h2>
     <div class="table-responsive">
         <table class="table table-hover table-striped">
             <thead>
                 <tr>
-                    <th>{{ "Course"|get_lang }}</th>
-                    <th class="text-right">{{ "Score"|get_lang }}</th>
-                    <th class="text-center">{{ "Date"|get_lang }}</th>
+                    <th>{{ 'Course'|get_lang }}</th>
+                    <th class="text-right">{{ 'Score'|get_lang }}</th>
+                    <th class="text-center">{{ 'Date'|get_lang }}</th>
                     <th class="text-right">&nbsp;</th>
                 </tr>
             </thead>
@@ -29,15 +29,15 @@
 {% endif %}
 
 {% if session_list is not empty %}
-    <h2 class="page-header">{{ "Sessions"|get_lang }}</h2>
+    <h2 class="page-header">{{ 'Course sessions'|get_lang }}</h2>
     <div class="table-responsive">
         <table class="table table-hover table-striped">
             <thead>
                 <tr>
-                    <th>{{ "Session"|get_lang }}</th>
-                    <th>{{ "Course"|get_lang }}</th>
-                    <th class="text-right">{{ "Score"|get_lang }}</th>
-                    <th class="text-center">{{ "Date"|get_lang }}</th>
+                    <th>{{ 'Session'|get_lang }}</th>
+                    <th>{{ 'Course'|get_lang }}</th>
+                    <th class="text-right">{{ 'Score'|get_lang }}</th>
+                    <th class="text-center">{{ 'Date'|get_lang }}</th>
                     <th class="text-right">&nbsp;</th>
                 </tr>
             </thead>
