--- a/public/main/template/default/my_space/accessoverview.html.twig
+++ b/public/main/template/default/my_space/accessoverview.html.twig
@@ -1,7 +1,7 @@
 {% autoescape false %}
 <h2 class="page-header">{{ 'Accesses by user overview'|get_lang }}</h2>
 {{ form }}
-<h3 class="page-header">{{ 'Results'|get_lang }}</h3>
+<h3 class="page-header">{{ 'Results and feedback'|get_lang }}</h3>
 {{ table }}
 <script>
     $(function(){
