--- a/public/main/template/default/my_space/partials/tracking_user_overview.html.twig
+++ b/public/main/template/default/my_space/partials/tracking_user_overview.html.twig
@@ -31,30 +31,30 @@
                                 <span class="code">{{ course.code }}</span>
                             </div>
                             <div class="box time-spent" data-toggle="tooltip" data-placement="top"
-                                 title="{{ 'CourseTimeInfo'|get_lang }}">
+                                 title="{{ 'Time spent in the course'|get_lang }}">
                                  {{ 'alarm' | mdi_icon }}
                                  {{ course.time_spent }}
                             </div>
                             <div class="box" data-toggle="tooltip" data-placement="top"
-                                 title="{{ 'AvgStudentsProgress'|get_lang }}">
+                                 title="{{ 'Progress'|get_lang }}">
                                 <span class="kt-badge student-progress">
                                     {{ course.student_progress }} %
                                 </span>
                             </div>
                             <div class="box" data-toggle="tooltip" data-placement="top"
-                                 title="{{ 'AvgCourseScore'|get_lang }}">
+                                 title="{{ 'Average score in learning paths'|get_lang }}">
                                 <span class="kt-badge student-score">
                                     {{ course.student_score }}
                                 </span>
                             </div>
                             <div class="box" data-toggle="tooltip" data-placement="top"
-                                 title="{{ 'TotalNumberOfMessages'|get_lang }}">
+                                 title="{{ 'Total number of messages'|get_lang }}">
                                 <span class="kt-badge student-message">
                                     {{ course.student_message }}
                                 </span>
                             </div>
                             <div class="box" data-toggle="tooltip" data-placement="top"
-                                 title="{{ 'TotalNumberOfAssignments'|get_lang }}">
+                                 title="{{ 'Total number of assignments'|get_lang }}">
                                 <span class="kt-badge student-assignments">
                                     {{ course.student_assignments }}
                                 </span>
@@ -62,20 +62,20 @@
                             <div class="box">
                                 <span class="kt-badge student-exercises" data-toggle="tooltip"
                                       data-placement="top"
-                                      title="{{ 'TotalExercisesScoreObtained'|get_lang }}">
+                                      title="{{ 'Total score obtained for tests'|get_lang }}">
                                     {{ course.student_assignments }}
                                 </span>
                             </div>
                             <div class="box">
                                 <span class="kt-badge questions-answered" data-toggle="tooltip"
                                       data-placement="top"
-                                      title="{{ 'TotalExercisesAnswered'|get_lang }}">
+                                      title="{{ 'Number of tests answered'|get_lang }}">
                                     {{ course.questions_answered }}
                                 </span>
                             </div>
                             <div class="box box-date" data-toggle="tooltip"
                                  data-placement="top"
-                                 title="{{ 'LatestLogin'|get_lang }}">
+                                 title="{{ 'Latest login'|get_lang }}">
                                 {% if course.last_connection  %}
                                 <span class="kt-badge last-connection">
                                      {{ course.last_connection }}
