--- a/public/main/template/default/my_space/user_summary.html.twig
+++ b/public/main/template/default/my_space/user_summary.html.twig
@@ -11,37 +11,37 @@
         <li>
             <span class="cube student-progress">
             </span>
-            {{ 'AvgStudentsProgress'|get_lang }}
+            {{ 'Progress'|get_lang }}
         </li>
         <li>
             <span class="cube student-score">
             </span>
-            {{ 'AvgCourseScore'|get_lang }}
+            {{ 'Average score in learning paths'|get_lang }}
         </li>
         <li>
             <span class="cube student-message">
             </span>
-            {{ 'TotalNumberOfMessages'|get_lang }}
+            {{ 'Total number of messages'|get_lang }}
         </li>
         <li>
             <span class="cube student-assignments">
             </span>
-            {{ 'TotalNumberOfAssignments'|get_lang }}
+            {{ 'Total number of assignments'|get_lang }}
         </li>
         <li>
             <span class="cube student-exercises">
             </span>
-            {{ 'TotalExercisesScoreObtained'|get_lang }}
+            {{ 'Total score obtained for tests'|get_lang }}
         </li>
         <li>
             <span class="cube questions-answered">
             </span>
-            {{ 'TotalExercisesAnswered'|get_lang }}
+            {{ 'Number of tests answered'|get_lang }}
         </li>
         <li>
             <span class="cube last-connection">
             </span>
-            {{ 'LatestLogin'|get_lang }}
+            {{ 'Latest login'|get_lang }}
         </li>
     </ul>
 </div>
