--- a/public/main/template/default/social/form_modals.html.twig
+++ b/public/main/template/default/social/form_modals.html.twig
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="{{ 'Close' | get_lang }}">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="send-invitation-modal-title">{{ 'SendInvitation' | get_lang }}</h4>
+                <h4 class="modal-title" id="send-invitation-modal-title">{{ 'Send invitation' | get_lang }}</h4>
             </div>
             <div class="modal-body">
                 <div id="send-invitation-alert"></div>
@@ -13,7 +13,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" id="btn-send-invitation" class="btn btn--primary">
-                    <em class="fa fa-send"></em> {{ 'Send' | get_lang }}
+                    <em class="fa fa-send"></em> {{ 'Send message' | get_lang }}
                 </button>
             </div>
         </div>
