--- a/public/main/template/default/social/group_view.html.twig
+++ b/public/main/template/default/social/group_view.html.twig
@@ -12,9 +12,9 @@
                     {{ 'Privacy' | get_lang }}
 
                     {% if group_info.visibility == 1 %}
-                        {{ 'ThisIsAnOpenGroup' | get_lang }}
+                        {{ 'This is an open group' | get_lang }}
                     {% else %}
-                        {{ 'ThisIsACloseGroup' | get_lang }}
+                        {{ 'This is a closed group' | get_lang }}
                     {% endif %}
                 </div>
             {% endif %}
