--- a/public/main/template/default/social/skills_block.html.twig
+++ b/public/main/template/default/social/skills_block.html.twig
@@ -26,7 +26,7 @@ $(function () {
         {#<div class="panel-heading" role="tab" id="headingOne">#}
             {#<h4 class="panel-title">#}
                 {#<a role="button" data-toggle="collapse" data-parent="#skill-block" href="#skillList" aria-expanded="true" aria-controls="skillList">#}
-                    {#{{ "Skills" | get_lang }}#}
+                    {#{{ 'Skills' | get_lang }}#}
                 {#</a>#}
                 {#<div class="btn-group pull-right">#}
                     {#<a class="btn btn-xs btn--plain dropdown-toggle" data-toggle="dropdown" href="#">#}
@@ -35,14 +35,14 @@ $(function () {
                     {#<ul class="dropdown-menu">#}
                         {#{% if show_skills_report_link %}#}
                             {#<li>#}
-                                {#<a href="{{ _p.web_main ~ 'social/my_skills_report.php' }}"> {{'SkillsReport'|get_lang }}</a>#}
+                                {#<a href="{{ _p.web_main ~ 'social/my_skills_report.php' }}"> {{'Skills report'|get_lang }}</a>#}
                             {#</li>#}
                         {#{% endif %}#}
                         {#<li>#}
-                            {#<a href="{{ _p.web_main ~ 'social/skills_wheel.php' }}"> {{ 'SkillsWheel'|get_lang }}</a>#}
+                            {#<a href="{{ _p.web_main ~ 'social/skills_wheel.php' }}"> {{ 'Skills wheel'|get_lang }}</a>#}
                         {#</li>#}
                         {#<li>#}
-                            {#<a href="{{ _p.web_main ~ 'social/skills_ranking.php' }}"> {{ 'YourSkillRankingX'|get_lang|format(ranking) }}</a>#}
+                            {#<a href="{{ _p.web_main ~ 'social/skills_ranking.php' }}"> {{ 'Your skill ranking: %s'|get_lang|format(ranking) }}</a>#}
                         {#</li>#}
                     {#</ul>#}
                 {#</div>#}
