--- a/public/main/template/default/social/whoisonline.html.twig
+++ b/public/main/template/default/social/whoisonline.html.twig
@@ -8,7 +8,7 @@
             <div class="search-user">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        {{ 'SearchUsers' | get_lang}}
+                        {{ 'Search users' | get_lang}}
                     </div>
                     <div class="panel-body">
                         {{ social_search }}
