--- a/public/main/template/default/user_portal/course_categories.html.twig
+++ b/public/main/template/default/user_portal/course_categories.html.twig
@@ -1,7 +1,7 @@
 {% import '@ChamiloCore/Macros/box.html.twig' as macro %}
 
-<h2>{{ 'CourseCategory'|get_lang }}</h2>
-<p>{{ 'MyCoursePageCategoryIntroduction'|get_lang }}</p>
+<h2>{{ 'Course category'|get_lang }}</h2>
+<p>{{ 'You will find below the list of course categories.'|get_lang }}</p>
 {% autoescape false %}
 <div class="category-list">
     {% for category in course_categories %}
