--- a/public/main/template/default/admin/teachers_time_by_session_report.html.twig
+++ b/public/main/template/default/admin/teachers_time_by_session_report.html.twig
@@ -7,17 +7,17 @@
         <table class="table table-hover table-striped">
             <thead>
                 <tr>
-                    <th>{{ 'OfficialCode'|get_lang }}</th>
-                    <th>{{ 'CoachName'|get_lang }}</th>
-                    <th>{{ 'TimeSpentOnThePlatform'|get_lang }}</th>
-                    <th>{{ 'FirstLoginInPlatform'|get_lang }}</th>
-                    <th>{{ 'LatestLoginInPlatform'|get_lang }}</th>
+                    <th>{{ 'Code'|get_lang }}</th>
+                    <th>{{ 'Coach name'|get_lang }}</th>
+                    <th>{{ 'Time spent in portal'|get_lang }}</th>
+                    <th>{{ 'First login in platform'|get_lang }}</th>
+                    <th>{{ 'Latest login in platform'|get_lang }}</th>
 
                     {% for course_code in courses %}
                         <th>{{ course_code }}</th>
-                        <th>{{ 'NumberOfWorks'|get_lang }}</th>
-                        <th>{{ 'LastWork'|get_lang }}</th>
-                        <th>{{ 'TimeReportForCourseX'|get_lang|format(course_code) }}</th>
+                        <th>{{ 'Number of works'|get_lang }}</th>
+                        <th>{{ 'Last work'|get_lang }}</th>
+                        <th>{{ 'Time report for course %s'|get_lang|format(course_code) }}</th>
                     {% endfor %}
                 </tr>
             </thead>
@@ -38,17 +38,17 @@
             <table class="table table-hover table-striped">
                 <thead>
                     <tr>
-                        <th>{{ 'OfficialCode'|get_lang }}</th>
+                        <th>{{ 'Code'|get_lang }}</th>
                         <th>{{ 'Name'|get_lang }}</th>
-                        <th>{{ 'TimeSpentOnThePlatform'|get_lang }}</th>
-                        <th>{{ 'FirstLoginInPlatform'|get_lang }}</th>
-                        <th>{{ 'LatestLoginInPlatform'|get_lang }}</th>
+                        <th>{{ 'Time spent in portal'|get_lang }}</th>
+                        <th>{{ 'First login in platform'|get_lang }}</th>
+                        <th>{{ 'Latest login in platform'|get_lang }}</th>
 
                         {% for course in row.courses %}
                             <th>{{ course.code }}</th>
-                            <th>{{ 'NumberOfWorks'|get_lang }}</th>
-                            <th>{{ 'LastWork'|get_lang }}</th>
-                            <th>{{ 'TimeReportForCourseX'|get_lang|format(course_code) }}</th>
+                            <th>{{ 'Number of works'|get_lang }}</th>
+                            <th>{{ 'Last work'|get_lang }}</th>
+                            <th>{{ 'Time report for course %s'|get_lang|format(course_code) }}</th>
                         {% endfor %}
                     </tr>
                 </thead>
