--- a/public/main/template/default/course_description/edit.html.twig
+++ b/public/main/template/default/course_description/edit.html.twig
@@ -7,7 +7,7 @@
 {% if is_allowed_to_edit %}
     <div class="btn-toolbar actions-bar" >
         <div class="btn-group">
-            <a href="{{root}}&amp;action=listing" class="btn btn--plain" title="{{'ImportCSV'|get_lang}}">
+            <a href="{{root}}&amp;action=listing" class="btn btn--plain" title="{{'Import CSV'|get_lang}}">
                 <em class="size-32 icon-back"></em>
             </a>
         </div>
@@ -25,7 +25,7 @@
 {% if type.question %}
     <div class="normal-message">
         <div>
-            <strong>{{'QuestionPlan'|get_lang}}</strong>
+            <strong>{{'Help'|get_lang}}</strong>
         </div>
         {{type.question}}
     </div>
