--- a/public/main/template/default/my_space/pdf_tracking_lp.html.twig
+++ b/public/main/template/default/my_space/pdf_tracking_lp.html.twig
@@ -2,7 +2,7 @@
 <h3 style="text-align: center; text-transform: uppercase; font-size: 20px; font-weight: bold;">{{ data.title }}</h3>
 <br>
 <p>{{ 'Candidate' | get_lang }} : {{ data.candidate }}</p>
-<p>{{ 'ScormStartAttemptDate' | get_lang }} : {{ data.start_date }}</p>
+<p>{{ 'Date' | get_lang }} : {{ data.start_date }}</p>
 <br>
 <table style="width: 100%; font-size: 12px; font-weight: normal;">
     <tr>
@@ -16,10 +16,10 @@
             {{ 'Duration'|get_lang }}
         </th>
         <th style="text-align: center; background: #222222; color: #FFFFFF; border: 2px solid #FFFFFF;">
-            {{ 'StartTime'|get_lang }}
+            {{ 'Start Time'|get_lang }}
         </th>
         <th style="text-align: center; background: #222222; color: #FFFFFF; border: 2px solid #FFFFFF;">
-            {{ 'EndTime'|get_lang }}
+            {{ 'End Time'|get_lang }}
         </th>
     </tr>
     <tr>
@@ -68,7 +68,7 @@
             {% endif %}
         </td>
         <td style="text-align: left; padding: 5px; display: block; border-bottom: 1px solid #cdcdcd;">
-            <img src="{{ "bar_progress.png"|icon(22) }}" width="{{ item.score_numeric }}px" height="16px" alt="{{ "Percentage"|get_lang }}"/>
+            <img src="{{ "bar_progress.png"|icon(22) }}" width="{{ item.score_numeric }}px" height="16px" alt="{{ 'Percentage'|get_lang }}"/>
             {% if item.score_numeric == 0 %}
                 <span style="color: red;">{{ item.score_percentage }}</span>
             {% else %}
@@ -81,13 +81,13 @@
     {% for item in general_score %}
         <tr>
             <td style="text-align: left; padding: 5px; height:30px; background: #222222; color: #FFFFFF; display: block;">
-                <b>{{ 'GeneralTotal' | get_lang }}</b>
+                <b>{{ 'General total' | get_lang }}</b>
             </td>
             <td style="text-align: center; padding: 5px; display: block;background-color: #f6ffe2;">
                 {{ item.score }}
             </td>
             <td style="text-align: left; padding: 5px; display: block; background-color: #f6ffe2;">
-                <img src="{{ "bar_progress.png"|icon(22) }}" width="{{ item.score_numeric }}px" height="16px" alt="{{ "Percentage"|get_lang }}"/>
+                <img src="{{ "bar_progress.png"|icon(22) }}" width="{{ item.score_numeric }}px" height="16px" alt="{{ 'Percentage'|get_lang }}"/>
                 {% if item.score_numeric == 0 %}
                     <span style="color: red;">{{ item.score_percentage }}</span>
                 {% else %}
