--- a/public/main/template/default/my_space/works_in_session_report.html.twig
+++ b/public/main/template/default/my_space/works_in_session_report.html.twig
@@ -7,16 +7,16 @@
         <table class="table table-hover table-striped">
             <thead>
                 <tr>
-                    <th>{{ 'OfficialCode'|get_lang }}</th>
-                    <th>{{ 'StudentName'|get_lang }}</th>
-                    <th>{{ 'TimeSpentOnThePlatform'|get_lang }}</th>
-                    <th>{{ 'FirstLoginInPlatform'|get_lang }}</th>
-                    <th>{{ 'LatestLoginInPlatform'|get_lang }}</th>
+                    <th>{{ 'Code'|get_lang }}</th>
+                    <th>{{ 'Learner name'|get_lang }}</th>
+                    <th>{{ 'Time spent in portal'|get_lang }}</th>
+                    <th>{{ 'First login in platform'|get_lang }}</th>
+                    <th>{{ 'Latest login in platform'|get_lang }}</th>
 
                     {% for course_code in courses %}
-                        <th>{{ course_code }} <br />({{ 'BestScore' | get_lang }})</th>
+                        <th>{{ course_code }} <br />({{ 'Best score' | get_lang }})</th>
                         <th>{{ 'Progress'|get_lang }}</th>
-                        <th>{{ 'LastSentWorkDate'|get_lang }}</th>
+                        <th>{{ 'Last sent work date'|get_lang }}</th>
                     {% endfor %}
                 </tr>
             </thead>
