--- a/public/main/template/default/social/avatar_block.html.twig
+++ b/public/main/template/default/social/avatar_block.html.twig
@@ -15,7 +15,7 @@
                 {% if user_is_group_admin %}
                     <div id="edit_image" class="buttom-subscribed">
                         <a class="btn btn--plain" href="{{ url('legacy_main', { 'name' : 'social/group_edit.php', 'id': group_id}) }}">
-                            {{ 'EditGroup'|get_lang }}
+                            {{ 'Edit this group'|get_lang }}
                         </a>
                     </div>
                     <br />
@@ -23,7 +23,7 @@
             </div>
         {% elseif show_user %}
             <a href="{{ user_image.big }}" class="expand-image">
-                <img class="img-responsive img-circle" src="{{ user_image.big }}" alt="{{ 'UserPicture'|get_lang }}">
+                <img class="img-responsive img-circle" src="{{ user_image.big }}" alt="{{ 'Picture'|get_lang }}">
             </a>
         {% endif %}
     </div>
