--- a/public/main/template/default/social/home.html.twig
+++ b/public/main/template/default/social/home.html.twig
@@ -20,7 +20,7 @@
                 <div class="spinner"></div>
                 <div class="panel panel-preview panel-default" hidden="true">
                     <div class="panel-heading">
-                        <h3 class="panel-title">{{ "Url" | get_lang }} - {{ "Preview" | get_lang }}</h3>
+                        <h3 class="panel-title">{{ 'URL' | get_lang }} - {{ 'Preview' | get_lang }}</h3>
                     </div>
                     <div class="panel-body">
                         <div class="url_preview"></div>
@@ -47,7 +47,7 @@
                                    href="#listFriends"
                                    aria-expanded="true"
                                    aria-controls="listFriends">
-                                    {{ "SocialFriend" | get_lang }}
+                                    {{ 'My friends' | get_lang }}
                                 </a>
                             </h4>
                         </div>
@@ -64,7 +64,7 @@
                                     <div class="geolocalization">
                                         <a class="btn btn-maps" id="profile-tab" href="{{ _p.web }}main/social/map.php" >
                                             {{ 'ObjectIcon::MAP_MARKER'|mdi_icon(32) }}
-                                            {{ 'SearchUserByGeolocalization' | get_lang }}
+                                            {{ 'By geolocalization' | get_lang }}
                                         </a>
                                     </div>
                                 {% endif %}
@@ -85,7 +85,7 @@
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
                                 <a role="button" data-toggle="collapse" data-parent="#session-block" href="#sessionList" aria-expanded="true" aria-controls="sessionList">
-                                    {{ "MySessions" | get_lang }}
+                                    {{ 'My sessions' | get_lang }}
                                 </a>
                             </h4>
                         </div>
