--- a/public/main/template/default/social/personal_data.html.twig
+++ b/public/main/template/default/social/personal_data.html.twig
@@ -17,11 +17,11 @@
         {% endif %}
         {% if personal_data.officer_name %}
             <div class="panel personal-data-responsible">
-                <div class="panel-title">{{ 'PersonalDataOfficerName' | get_lang }}</div>
+                <div class="panel-title">{{ 'Personal data officer's name' | get_lang }}</div>
                 <div class="personal-data-responsible-description">
                     <a href="mailto:{{ personal_data.officer_email }}">{{ personal_data.officer_name }}</a>
                 </div>
-                <div class="panel-title">{{ 'PersonalDataOfficerRole' | get_lang }}</div>
+                <div class="panel-title">{{ 'Personal data officer's role' | get_lang }}</div>
                 <div class="personal-data-responsible-description">
                     {{ personal_data.officer_role }}
                 </div>
