--- a/public/main/template/default/social/profile.html.twig
+++ b/public/main/template/default/social/profile.html.twig
@@ -21,7 +21,7 @@
             <div class="spinner"></div>
             <div class="panel panel-preview panel-default" hidden="true">
                 <div class="panel-heading">
-                    <h3 class="panel-title">{{ "Url" | get_lang }} - {{ "Preview" | get_lang }}</h3>
+                    <h3 class="panel-title">{{ 'URL' | get_lang }} - {{ 'Preview' | get_lang }}</h3>
                 </div>
                 <div class="panel-body">
                     <div class="url_preview"></div>
@@ -38,7 +38,7 @@
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
                                 <a role="button" data-toggle="collapse" data-parent="#blocklistFriends" href="#listFriends" aria-expanded="true" aria-controls="listFriends">
-                                    {{ "SocialFriend" | get_lang }}
+                                    {{ 'My friends' | get_lang }}
                                 </a>
                             </h4>
                         </div>
@@ -60,7 +60,7 @@
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
                                 <a role="button" data-toggle="collapse" data-parent="#course-block" href="#courseList" aria-expanded="true" aria-controls="courseList">
-                                    {{ "MyCourses" | get_lang }}
+                                    {{ 'My courses' | get_lang }}
                                 </a>
                             </h4>
                         </div>
@@ -81,7 +81,7 @@
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
                                 <a role="button" data-toggle="collapse" data-parent="#session-block" href="#sessionList" aria-expanded="true" aria-controls="sessionList">
-                                    {{ "MySessions" | get_lang }}
+                                    {{ 'My sessions' | get_lang }}
                                 </a>
                             </h4>
                         </div>
