--- a/public/main/template/default/user_portal/classic_session.html.twig
+++ b/public/main/template/default/user_portal/classic_session.html.twig
@@ -118,15 +118,15 @@
                                             <div class="course-student-info">
                                                 <div class="student-info">
                                                     {% if (item.student_info.progress is not null) %}
-                                                        {{ "StudentCourseProgressX" | get_lang | format(item.student_info.progress) }}
+                                                        {{ 'Progress: %s %%' | get_lang | format(item.student_info.progress) }}
                                                     {% endif %}
 
                                                     {% if (item.student_info.score is not null) %}
-                                                        {{ "StudentCourseScoreX" | get_lang | format(item.student_info.score) }}
+                                                        {{ 'Score: %s %%' | get_lang | format(item.student_info.score) }}
                                                     {% endif %}
 
                                                     {% if (item.student_info.certificate is not null) %}
-                                                        {{ "StudentCourseCertificateX" | get_lang | format(item.student_info.certificate) }}
+                                                        {{ 'Certificate: %s' | get_lang | format(item.student_info.certificate) }}
                                                     {% endif %}
                                                 </div>
                                             </div>
