--- a/public/main/template/default/user_portal/grid_courses_with_category.html.twig
+++ b/public/main/template/default/user_portal/grid_courses_with_category.html.twig
@@ -71,15 +71,15 @@
                                             <div class="course-student-info">
                                                 <div class="student-info">
                                                     {% if (item.student_info.progress is not null) %}
-                                                        {{ "StudentCourseProgressX" | get_lang | format(item.student_info.progress) }}
+                                                        {{ 'Progress: %s %%' | get_lang | format(item.student_info.progress) }}
                                                     {% endif %}
 
                                                     {% if (item.student_info.score is not null) %}
-                                                        {{ "StudentCourseScoreX" | get_lang | format(item.student_info.score) }}
+                                                        {{ 'Score: %s %%' | get_lang | format(item.student_info.score) }}
                                                     {% endif %}
 
                                                     {% if (item.student_info.certificate is not null) %}
-                                                        <span title="{{ "StudentCourseCertificateX" | get_lang | format(item.student_info.certificate) }}">
+                                                        <span title="{{ 'Certificate: %s' | get_lang | format(item.student_info.certificate) }}">
                                                             <i class="fa fa-certificate" aria-hidden="true"></i>
                                                             {{ item.student_info.certificate }}
                                                         </span>
