--- a/public/main/template/default/user_portal/grid_session.html.twig
+++ b/public/main/template/default/user_portal/grid_session.html.twig
@@ -47,7 +47,7 @@
                             tabindex="0" role="button"
                             class="btn btn--plain panel_popover"
                             data-toggle="popover"
-                            title="{{ 'CourseTeachers' | get_lang }}"
+                            title="{{ 'Teachers' | get_lang }}"
                             data-html="true"
                         >
                             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
@@ -79,7 +79,7 @@
                                       {{ teacher.firstname }} {{ teacher.lastname }}
                                   </a>
                               </h5>
-                              <p>{{ "Teacher"|get_lang }}</p>
+                              <p>{{ 'Trainer'|get_lang }}</p>
                           </div>
                         {% endif %}
                     {% endfor %}
@@ -97,13 +97,13 @@
                         <div class="course-student-info">
                             <div class="student-info">
                                 {% if (item.student_info.progress is not null) %}
-                                    {{ "StudentCourseProgressX" | get_lang | format(item.student_info.progress) }}
+                                    {{ 'Progress: %s %%' | get_lang | format(item.student_info.progress) }}
                                 {% endif %}
                                 {% if (item.student_info.score is not null) %}
-                                    {{ "StudentCourseScoreX" | get_lang | format(item.student_info.score) }}
+                                    {{ 'Score: %s %%' | get_lang | format(item.student_info.score) }}
                                 {% endif %}
                                 {% if (item.student_info.certificate is not null) %}
-                                    {{ "StudentCourseCertificateX" | get_lang | format(item.student_info.certificate) }}
+                                    {{ 'Certificate: %s' | get_lang | format(item.student_info.certificate) }}
                                 {% endif %}
                             </div>
                         </div>
